@@ -1,6 +1,11 @@
 
 Version (CVS)
 -------------
+
+XML:	Added setRootElement method to Marshaller.java to override default root element name for document. 
+	Usefull when using classses generated via 'type' mapping, as the root element name is not known.
+	(Andrew Fawcett, andrew.fawcett@coda.com)
+
 XML:	Fix the Marshaller to handle correctly Vector by keeping the xsi:type information 
 	(Bug reported by Eric Kaplan (eric.kaplan@armanta.com) (Arnaud)
 
